fix bpm changes too big

--- a/components/SearchPage/SongChartDetails.module.scss
+++ b/components/SearchPage/SongChartDetails.module.scss
@@ -86,6 +86,8 @@
   }
 
   .Detail {
+    display: flex;
+    gap: 0.5rem;
     margin-top: 0.375rem;
     font-size: 0.875rem;
 
@@ -107,7 +109,6 @@
     }
 
     .value {
-      margin-left: 0.5rem;
       display: inline-flex;
       column-gap: 0.25rem;
       align-items: flex-start;
